<resources>
    <string name="app_name">MyRestaurantApplication</string>
    <string name="LoginButton">Login</string>
    <string name="SignUpButton">Sign Up</string>
    <string name="logo">logoImage</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="customerName">Username</string>
    <string name="customerPhoneNumber">Phone number</string>
    <string name="BookTable">Book table</string>
    <string name="bookings">Bookings</string>
    <string name="profile">Profile</string>
    <string name="signOut">Sign Out</string>
    <string name="findTable">Find table</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>