<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#313538"
    tools:context=".MainActivity">


        <Button
            android:id="@+id/loginButton"
            android:layout_width="288dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/gold"
            android:text="@string/LoginButton"
            android:textAppearance="@style/defaultFont"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.731" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="288dp"
            android:layout_height="90dp"
            android:text="@string/SignUpButton"
            android:backgroundTint="@color/background"
            android:textAppearance="@style/defaultFont"
            android:textColor="@color/gold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.901"
            app:strokeColor="@color/gold"
            app:strokeWidth="3dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="342dp"
            android:layout_height="310dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.249"
            app:srcCompat="@drawable/mobile_logo" />

        <!-- Auto layout, variables, and unit scale are not yet supported -->


</androidx.constraintlayout.widget.ConstraintLayout>